# RestPK

./: .gitignore  AGENT_RULES.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROJECT_RULES.md  README.md  vcpkg.json
assets/: NEXT_STEPS.md  README.md  STRUCTURE.md
backend/: CMakeLists.txt  README.md
backend/include/restpk/: Player.hpp  World.hpp
backend/src/: Player.cpp  World.cpp
client/: CMakeLists.txt  NEXT_STEPS.md  README.md  STRUCTURE.md
client/include/restpk/: Camera.hpp  Game.hpp
client/src/: Camera.cpp  Game.cpp  main.cpp
docs/: bootstrap-plan.md  client-bootstrap.md  directory-responsibilities.md  first-technical-scope.md  implementation-order.md  integration-boundaries.md  map-bootstrap.md  ot-stack.md  rendering-architecture.md  repo-conventions.md  roadmap.md  server-bootstrap.md  setup.md  technical-stack.md  vision.md
map/: NEXT_STEPS.md  README.md  STRUCTURE.md
server/: BOOTSTRAP_PLAN.md  NEXT_STEPS.md  README.md  STRUCTURE.md
shared/: CMakeLists.txt  README.md
shared/include/restpk/: Direction.hpp  MovementResult.hpp  Position.hpp  Tile.hpp
tools/: NEXT_STEPS.md  README.md  STRUCTURE.md
